# meeting_report_Crew

./: LICENSE  README.md  agents.py  main.py  pyproject.toml  tasks.py
data/meetings_details_examples/: meeting_invitation_details.txt
data/meetings_notes_examples/: notes_maxime_richaudeau.txt
